add request validation plugin
