# src/main/kotlin/routes/api/Register.kt
@@ -3,17 +3,23 @@ package me.blueb.routes.api
 import io.ktor.http.HttpStatusCode
 import io.ktor.http.fullPath
 import io.ktor.resources.Resource
+import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.routing.Route
 import io.ktor.server.routing.post
+import kotlinx.serialization.Serializable
 import me.blueb.models.exposed.ExposedUser
 import me.blueb.models.exposed.ExposedUserPrivate
 import me.blueb.services.ConfigService
 import me.blueb.services.IdentifierService
 import org.koin.ktor.ext.inject
+import kotlin.math.log
 
 @Resource("/api/register")
-class RegisterResource(
+class RegisterResource()
+
+@Serializable
+data class RegisterBody(
     val username: String,
     val password: String,
 )
@@ -23,7 +29,11 @@ fun Route.register() {
     val identifierService by inject<IdentifierService>()
 
     post<RegisterResource> { res ->
+        val body = call.receive<RegisterBody>()
+
         val id = identifierService.generate()
+
+        println(body.username)
 
         val newUser =
             ExposedUser(
@@ -31,14 +41,14 @@ fun Route.register() {
                 apId = configService.instance.url.fullPath + "/user/" + id,
                 inbox = configService.instance.url.fullPath + "/user/" + id + "/inbox",
                 outbox = configService.instance.url.fullPath + "/user/" + id + "/outbox",
-                username = res.username,
+                username = body.username,
                 host = configService.instance.url.host,
             )
 
         val newUserPrivate =
             ExposedUserPrivate(
                 id = id,
-                password = res.password,
+                password = body.password,
             )
 
         call.respond(HttpStatusCode.Companion.NotImplemented)
